@@ -96,11 +96,13 @@ public:
     MWAW_T_UNKNOWN=0 /**< Unrecognised file type*/,
     MWAW_T_ACTA /**Acta (v2 and Classic v1)*/,
     MWAW_T_BEAGLEWORKS /**BeagleWorks (v1.0)/WordPerfect Works (v1.2): export spreadsheet and text files.*/,
-    MWAW_T_CLARISRESOLVE /**Claris Resolve: TODO*/,
+    MWAW_T_CLARISRESOLVE /**Claris Resolve (v1.1)*/,
     MWAW_T_CLARISWORKS /**ClarisWorks/AppleWorks: all versions, export text, draw/paint(as text), spreadsheet/database (as spreadsheet) document*/,
     MWAW_T_DOCMAKER /** DocMaker (v4)*/,
     MWAW_T_EDOC /** eDOC (v2)*/,
     MWAW_T_FRAMEMAKER /** FrameMaker: TODO*/,
+    MWAW_T_FULLIMPACT /** FullImpact: TODO*/,
+    MWAW_T_FULLPAINT /** FullPaint: TODO*/,
     MWAW_T_FULLWRITE /** FullWrite Professional: basic*/,
     MWAW_T_GREATWORKS /** GreatWorks (v1-v2): export text, drawing(as text) and spreadsheet document.*/,
     MWAW_T_HANMACWORDJ /** HanMac Word-J (v2.0.4) */,
@@ -123,6 +125,7 @@ public:
     MWAW_T_PAGEMAKER /** PageMaker: TODO*/,
     MWAW_T_RAGTIME /** RagTime: TODO*/,
     MWAW_T_READYSETGO /** Ready,Set,Go!: TODO*/,
+    MWAW_T_SUPERPAINT /** SuperPaint: TODO*/,
     MWAW_T_TEACHTEXT /** TeachText/SimpleText*/,
     MWAW_T_TEXEDIT /** Tex-Edit (v2)*/,
     MWAW_T_TRAPEZE /** Trapeze spreadsheet: TODO*/,
