@@ -1,5 +1,10 @@
 CHANGES:
 
+2/21/2014:
+- Claris Resolve: add a spreadsheet parser (only export spreadsheet's content
+  but not the frames)
+- Claris Resolve/Wingz: try to decode encrypted files
+
 2/14/2014:
 - Wingz: add a spreadsheet parser (only export spreadsheet's content
   but not the frames)
